--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,10 +1,9 @@
 <div id="<%= dom_id user %>">
   <p>
-    <strong>User:</strong>
-    <%= user.user_id %>
+ <p>
+    <strong>Username:</strong>
+    <%= user.username %>
   </p>
-
-  <p>
     <strong>First name:</strong>
     <%= user.first_name %>
   </p>
@@ -20,13 +19,10 @@
   </p>
 
   <p>
-    <strong>Phone:</strong>
-    <%= user.phone %>
+    <strong>Password:</strong>
+    <%= user.pass%>
   </p>
 
-  <p>
-    <strong>Username:</strong>
-    <%= user.username %>
-  </p>
+  
 
 </div>
