improved auth and error page

--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -31,7 +31,7 @@
           </p>
           <p>
 
-          <%= link_to "Notes", notes_path%>
+          <%= link_to "Edit Profile", edit_admin_registration_path%>
           </p>
           <p>
 
