--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,16 +1,26 @@
-<div class="center">
-<br>
-<br>
 <h1>ABOUT US</h1>
 <br>
-<br>
 <h2>
-Work in progress...
-
+<div class="card" ">
+  <%= image_tag "about.png", class: "card-img-top"%>
+  <div class="card-body">
+    <p class="card-text fs-5 font-monospace">
+    MyManuscript is a web app designed to help writers stay organized and secure their notes. Our company was founded in 2012, and since then, we've been dedicated to providing our customers with high-quality and reliable web apps. Our team of professionals takes their work seriously and works tirelessly to ensure that our customers are happy with our products.
+    </br>
+    </br>
+    At MyManuscript, we believe in providing our customers with a platform that helps them streamline their writing process. Our app is designed to help writers keep their notes organized and secure, so they can focus on their craft. We're committed to providing the best user experience possible and constantly strive to improve our platform.
+    </br>
+    </br>
+    Our dedication to quality and integrity has earned us numerous accolades. We've won six Internet awards and received one Government recognition for our commitment to excellence. We're proud of our achievements and continue to work hard to maintain our reputation as a trusted and reliable web app provider.
+    </br>
+    </br>
+    Thank you for choosing MyManuscript. We're honored to be a part of your writing journey and look forward to helping you achieve your goals.
+    </p>
+  </div>
+</div>
 <br>
 <br>
 <br>
 <br>
 </h2>
-</div>
 
