--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -1,14 +1,15 @@
 <br>
 <br>
 <br>
-<div class="card text-center w-50 center">
+
+<div class="card w-50 center">
 
   <div class="card-header ">
 
 <!--New Note Button-->
 <div class="d-flex justify-content-between">
 
-    <%= note.created_at%>
+    <h4><%= note.title %></h4>
 <%= button_to "", note, method: :delete, class:"btn-close" %>
 
 </div>
@@ -18,21 +19,19 @@
 </div>
   <div class="card-body">
     <h5 class="card-title">
-    <%= note.title %>
+
     </h5>
     <p class="card-text">
 
     <%= note.text%>
    </p> 
   </div>
-  <div class="card-footer text-muted">
-
-  <%= link_to "edit", edit_note_path(note.id), class:"btn btn-warning btn-sm"  %> 
-  </div>
-
 </div>
-<br>
-<div class="center">
+<div class="center w-50">
+<p class="fw-lighter"> Created:    <%= note.created_at%></p>
+</br>
+  <%= link_to "edit", edit_note_path(note.id), class:"btn btn-warning btn-sm"  %> 
+</br>
   <%= link_to "Back to notes", notes_path %>
 </div>
 </div>
