--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,15 @@
  *= require_tree .
  *= require_self
  */
+ body.dark-mode {
+   background-color: #1a1a1a;
+   color: #f1f1f1;
+ }
+ 
+ .dark-mode h1, .dark-mode h2, .dark-mode h3 {
+   color: #fff;
+ }
+
 .center{
  margin: auto; 
  width: 40%;
