--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,59 +1,7 @@
+<% if admin_signed_in?%>
 
-<%# <h1>My Notes</h1> %>
-<div class='position-relative'>
+<%= render "logged", note: @note %>
+<% else %>
 
-<div class="center2">
-<!--New Note Button-->
-<div class="d-grid justify-content-md-end">
-<%= link_to "New note", new_note_path, class:"btn btn-success "%>
-</div>
-<!--New Note Button End-->
-<table class="table table-striped table-hover caption-top align-middle">
-<caption>My notes</caption>
-
-<thead>
-<tr>
-<th style="width: 30%">Title</td>
-<th style="width: 30%">Text</td>
-<th>Created</td>
-<th colspan="3">Actions</td>
-</tr>
-</thead>
-
-
-<tbody>
-  <% @notes.each do |note| %>
-    <tr>
-<td><strong><%= link_to note.title, note, class:"link-success"%></strong></td>
-<td><%= note.text %></td>
-
-<td><%= note.created_at%></td>
-
-<td>
-<%= link_to "show", note,  class:"btn btn-primary btn-sm"%>
- </td>
-<td>
-  <%= link_to "edit", edit_note_path(note.id), class:"btn btn-warning btn-sm"  %> 
-</td>
-<td>
-
-<%= button_to "", note, method: :delete, class:"btn-close" %>
-</td>
-</tr>
-  <% end %>
-</tbody>
-</table>
-
-<!--New Note Button-->
-<div class="d-grid justify-content-md-end">
-<%= link_to "New note", new_note_path, class:"btn btn-success "%>
-</div>
-<!--New Note Button End-->
-</div>
-
-
-</div>
-<br>
-<br>
-<br>
-<br>
+<%= render "welcome", note: @note %>
+<%end%>
