added Nickname and small fixes

--- a/app/views/notes/_logged.html.erb
+++ b/app/views/notes/_logged.html.erb
@@ -3,6 +3,7 @@
 <div class='position-relative'>
 
 <div class="center2">
+<h3>Hey, welcome back<i> <%= current_admin.nickname %></i>!</h3>
 <!--New Note Button-->
 <div class="d-grid justify-content-md-end">
 <%= link_to "New note", new_note_path, class:"btn btn-success "%>
