--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,9 +8,13 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
+<div class="field form-group">
+    <%= f.label :nickname %><br />
+    <%= f.text_field :nickname, class:"form-control", autofocus: true, autocomplete: "nickname" %>
+  </div>
   <div class="field form-group">
     <%= f.label :email %><br />
-    <%= f.email_field :email, class:"form-control", autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, class:"form-control",  autocomplete: "email" %>
   </div>
 
   <div class="field form-group">
